test/compilable/imports/foofunc2.d
module imports.foofunc2;
void foo2() { import imports.foofunc; foo(); }
