test/fail_compilation/imports/m10378a.d
module imports.m10378a;

string text(A...)(A args) { return ""; }

int foo() { return 1; }

string makeImportCode() { return "import imports.m10378b;"; }
